syntax = "proto3";

package echo;

service Echo {
  rpc Echo (EchoRequest) returns (EchoResponse) {}

  rpc EchoStream (EchoRequest) returns (stream EchoResponse) {}

  rpc EchoInfiniteStream (EchoRequest) returns (stream EchoResponse) {}

  rpc EchoErrorResponse (EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}
